increase font size to prevent zoom on mobile

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -24,6 +24,7 @@
   color: #808080;
   background-color: #808080;
   border: none;
+  font-size: 16px;
 }
 
 .faq-icon {
